src/objects/caesars_comp_detail__x.object
<CustomObject>
    <description>caesars$comp_detail</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$comp_detail</externalName>
    <fields>
        <fullName>account_c_prop_cd_fk__c</fullName>
        <description>account_c_prop_cd_fk</description>
        <externalDeveloperName>account_c_prop_cd_fk</externalDeveloperName>
        <label>account_c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_comment__c</fullName>
        <description>c_comp_comment</description>
        <externalDeveloperName>c_comp_comment</externalDeveloperName>
        <label>c_comp_comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_prof_used__c</fullName>
        <description>c_comp_prof_used</description>
        <externalDeveloperName>c_comp_prof_used</externalDeveloperName>
        <label>c_comp_prof_used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_status__c</fullName>
        <description>c_comp_status</description>
        <externalDeveloperName>c_comp_status</externalDeveloperName>
        <label>c_comp_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_type__c</fullName>
        <description>c_comp_type</description>
        <externalDeveloperName>c_comp_type</externalDeveloperName>
        <label>c_comp_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_code__c</fullName>
        <description>c_compor_code</description>
        <externalDeveloperName>c_compor_code</externalDeveloperName>
        <label>c_compor_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_name__c</fullName>
        <description>c_compor_name</description>
        <externalDeveloperName>c_compor_name</externalDeveloperName>
        <label>c_compor_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dept_cd__c</fullName>
        <description>c_dept_cd</description>
        <externalDeveloperName>c_dept_cd</externalDeveloperName>
        <label>c_dept_cd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_non_decrementing_comps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>c_non_decrementing_comps</description>
        <externalDeveloperName>c_non_decrementing_comps</externalDeveloperName>
        <label>c_non_decrementing_comps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_outlet_cat__c</fullName>
        <description>c_outlet_cat</description>
        <externalDeveloperName>c_outlet_cat</externalDeveloperName>
        <label>c_outlet_cat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_outlet_cd__c</fullName>
        <description>c_outlet_cd</description>
        <externalDeveloperName>c_outlet_cd</externalDeveloperName>
        <label>c_outlet_cd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>c_quality_cd_2</description>
        <externalDeveloperName>c_quality_cd_2</externalDeveloperName>
        <label>c_quality_cd_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_transaction_id__c</fullName>
        <description>c_transaction_id</description>
        <externalDeveloperName>c_transaction_id</externalDeveloperName>
        <label>c_transaction_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>d_comp_issue_date__c</fullName>
        <description>d_comp_issue_date</description>
        <externalDeveloperName>d_comp_issue_date</externalDeveloperName>
        <label>d_comp_issue_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_comp_used_date__c</fullName>
        <description>d_comp_used_date</description>
        <externalDeveloperName>d_comp_used_date</externalDeveloperName>
        <label>d_comp_used_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp_2__c</fullName>
        <description>d_timestamp_2</description>
        <externalDeveloperName>d_timestamp_2</externalDeveloperName>
        <label>d_timestamp_2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_avail__c</fullName>
        <description>f_cw_dlrs_avail</description>
        <externalDeveloperName>f_cw_dlrs_avail</externalDeveloperName>
        <label>f_cw_dlrs_avail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_issued__c</fullName>
        <description>f_cw_dlrs_issued</description>
        <externalDeveloperName>f_cw_dlrs_issued</externalDeveloperName>
        <label>f_cw_dlrs_issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_used__c</fullName>
        <description>f_cw_dlrs_used</description>
        <externalDeveloperName>f_cw_dlrs_used</externalDeveloperName>
        <label>f_cw_dlrs_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_dlrs_foreign_rc__c</fullName>
        <description>f_dlrs_foreign_rc</description>
        <externalDeveloperName>f_dlrs_foreign_rc</externalDeveloperName>
        <label>f_dlrs_foreign_rc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_num_foreign_rc__c</fullName>
        <description>f_num_foreign_rc</description>
        <externalDeveloperName>f_num_foreign_rc</externalDeveloperName>
        <label>f_num_foreign_rc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_avail_dlrs__c</fullName>
        <description>f_rc_avail_dlrs</description>
        <externalDeveloperName>f_rc_avail_dlrs</externalDeveloperName>
        <label>f_rc_avail_dlrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_issued__c</fullName>
        <description>f_rc_dlrs_issued</description>
        <externalDeveloperName>f_rc_dlrs_issued</externalDeveloperName>
        <label>f_rc_dlrs_issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_used__c</fullName>
        <description>f_rc_dlrs_used</description>
        <externalDeveloperName>f_rc_dlrs_used</externalDeveloperName>
        <label>f_rc_dlrs_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_num_issued__c</fullName>
        <description>f_rc_num_issued</description>
        <externalDeveloperName>f_rc_num_issued</externalDeveloperName>
        <label>f_rc_num_issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_num_used__c</fullName>
        <description>f_rc_num_used</description>
        <externalDeveloperName>f_rc_num_used</externalDeveloperName>
        <label>f_rc_num_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_comp_number__c</fullName>
        <description>i_comp_number</description>
        <externalDeveloperName>i_comp_number</externalDeveloperName>
        <label>i_comp_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_comp_worth_profile__c</fullName>
        <description>i_comp_worth_profile</description>
        <externalDeveloperName>i_comp_worth_profile</externalDeveloperName>
        <label>i_comp_worth_profile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid_2__c</fullName>
        <description>i_dmid_2</description>
        <externalDeveloperName>i_dmid_2</externalDeveloperName>
        <label>i_dmid_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_reward_credit_num__c</fullName>
        <description>i_reward_credit_num</description>
        <externalDeveloperName>i_reward_credit_num</externalDeveloperName>
        <label>i_reward_credit_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_xref_dmid__c</fullName>
        <description>i_xref_dmid</description>
        <externalDeveloperName>i_xref_dmid</externalDeveloperName>
        <label>i_xref_dmid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$comp_detail</label>
    <pluralLabel>caesars$comp_detail</pluralLabel>
</CustomObject>